--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fullcalendar/core": "^6.0.2",
     "@fullcalendar/daygrid": "^6.0.2",
     "@fullcalendar/react": "^6.0.2",
+    "@mantine/core": "^6.0.14",
+    "@mantine/hooks": "^6.0.14",
     "@mantine/rte": "^5.10.0",
     "@mui/icons-material": "^5.10.15",
     "@mui/lab": "^5.0.0-alpha.115",
@@ -22,6 +24,7 @@
     "@mui/x-date-pickers": "^5.0.12",
     "apexcharts": "^3.36.3",
     "axios": "^1.4.0",
+    "calendar-reactjs": "^0.1.0",
     "chart.js": "^4.3.0",
     "dayjs": "^1.11.7",
     "eslint": "8.28.0",
@@ -33,6 +36,7 @@
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-month-picker": "^2.2.1",
     "react-router-dom": "^6.4.3",
     "react-simple-maps": "^3.0.0",
     "react-tabs": "^6.0.0",
